--- a/style.css
+++ b/style.css
@@ -238,14 +238,6 @@
   color: var(--light-text);
 }
 
-.dark .mcard a {
-  color: var(--dark-text);
-}
-
-.light .mcard a {
-  color: var(--light-text);
-}
-
 /* theme colors end */
 
 /* GLOBAL */
@@ -543,13 +535,14 @@ section p {
   text-align: center;
   padding: 20px;
   margin-bottom: 20px;
-  transition: background-color 1s,border 1s;
+  transition: background-color 1s,border 1s,scale 1s;
 }
 
 .mcard img {
   width: 50px;
   height: 50px;
   margin-bottom: 20px;
+  transition: transform 0.5s ease;
 }
 
 .mcard:hover img {
