--- a/style.css
+++ b/style.css
@@ -472,6 +472,8 @@ section#skills {
   text-align: left;
 }
 
+
+
 #emi_bot {
   border-radius: 50%;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
@@ -482,11 +484,12 @@ section#skills {
   border-radius: 25px;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
   transition: background-color 1s,border 1s,transform 0.5s;
+    
 }
 
 .projcard img:hover,video:hover {
   transform: scale(1.7);
-  z-index: 1;  
+  z-index: 1;
 }
 
 .download-button {
@@ -497,15 +500,19 @@ section#skills {
   border-radius: 25px;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
   transition: background-color 0.5s,border 1s,font-size 0.5s,transform 0.5s;
-  display: inline-block;
   align-items: center;
+  position: relative;
+  display: inline-block;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .download-button img{
   border-radius: 50%;
   height: 50px;
   width: 50px;
-  margin-right: 10px;
+  margin-right: 10px;  
+  box-shadow: 0px 0px 0px;
 }
 
 .download-button a{
@@ -516,12 +523,14 @@ section#skills {
 }
 
 .download-button:hover{
+   z-index: 1;
   transform: scale(1.5);
 }
 
 .download-button img:hover{
   transform: scale(1);
 }
+
 .projcard#hosting img {
   width: 100%;
   margin-bottom: 5%;
